# AutoClickerMouse

./: .gitignore  CMakeLists.txt
src/: main.cpp
